--- a/ClinicaDental/CapaNegocio/CapaNegocio.csproj
+++ b/ClinicaDental/CapaNegocio/CapaNegocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NAtencionPacie.cs" />
     <Compile Include="NPaciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
